[gd_scene load_steps=4 format=3 uid="uid://cmm848yr108hd"]

[ext_resource type="Script" path="res://systems/tools/teleporter/debug_teleporter.gd" id="1_qnhqc"]

[sub_resource type="BoxShape3D" id="BoxShape3D_jtkv5"]
size = Vector3(5.39699, 6.00435, 0.371948)

[sub_resource type="TorusMesh" id="TorusMesh_rjojo"]
inner_radius = 0.297
outer_radius = 0.369
rings = 10
ring_segments = 5

[node name="DebugTeleporter" type="Area3D"]
collision_layer = 0
collision_mask = 2
script = ExtResource("1_qnhqc")

[node name="CollisionShape3D" type="CollisionShape3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -0.0426254, 1.41618, -0.038147)
shape = SubResource("BoxShape3D_jtkv5")

[node name="CSGMesh3D" type="CSGMesh3D" parent="."]
transform = Transform3D(8.083, 0, 0, 0, -4.10887e-07, -14.57, 0, 9.4, -6.36875e-07, 0, 0.0686799, 0)
mesh = SubResource("TorusMesh_rjojo")

[node name="LabelIndicator" type="Label3D" parent="."]
unique_name_in_owner = true
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 5.67862, 0)
pixel_size = 0.031
billboard = 1
text = "PORTAL"

[connection signal="body_entered" from="." to="." method="_on_body_entered"]
